--- a/src/components/ProfilePicture/ProfilePicture.css
+++ b/src/components/ProfilePicture/ProfilePicture.css
@@ -1,7 +1,7 @@
 .ProfilePicture {
   height: 6vh;
   aspect-ratio: 1;
-  outline: 3px solid var(--white);
+  box-shadow: 0 0 0 3px var(--white);
   border-radius: 100%;
   position: relative;
   display: flex;
