--- a/src/pages/GameRoom/components/GameCompletedRoom/GameCompleted.css
+++ b/src/pages/GameRoom/components/GameCompletedRoom/GameCompleted.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  min-height: 100vh;
+  min-height: 110vh;
   height: min-content;
   display: flex;
   align-items: center;
